--- a/ranks/requirements.txt
+++ b/ranks/requirements.txt
@@ -11,6 +11,7 @@ idna==3.3
 importlib-metadata==4.11.3
 pathspec==0.9.0
 pycodestyle==2.8.0
+python-dotenv==0.20.0
 pytz==2022.1
 PyYAML==6.0
 regex==2022.4.24
